--- a/src/components/css/TaskList.css
+++ b/src/components/css/TaskList.css
@@ -3,8 +3,12 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
     border-bottom: 1px solid #ccc;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    margin-bottom: 5px;
   }
   
   li:last-child {
@@ -13,7 +17,7 @@ li {
   
   li button {
     background-color: #dc3545;
-    margin-left: 10px;
+    margin-left: 1px; 
   }
   
   li button:hover {
